--- a/hw3/chatbot.ipynb
+++ b/hw3/chatbot.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "# HW3\n",
         "\n",
-        "I've removed most of the extra text and condensed the code a little bit."
+        "I've removed most of the extra text and condensed the code a little bit. I did not use google colab for this course, but instead my lab's cluster"
       ]
     },
     {
@@ -47,18 +47,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--2023-10-31 12:27:48--  https://zissou.infosci.cornell.edu/convokit/datasets/movie-corpus/movie-corpus.zip\n",
+            "--2023-11-02 13:08:12--  https://zissou.infosci.cornell.edu/convokit/datasets/movie-corpus/movie-corpus.zip\n",
             "Resolving zissou.infosci.cornell.edu (zissou.infosci.cornell.edu)... 128.253.51.179\n",
             "Connecting to zissou.infosci.cornell.edu (zissou.infosci.cornell.edu)|128.253.51.179|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 40854701 (39M) [application/zip]\n",
             "Saving to: ‘/pmglocal/vss2134/hpml/movie-corpus.zip’\n",
             "\n",
-            "/pmglocal/vss2134/h 100%[===================>]  38.96M  99.5MB/s    in 0.4s    \n",
+            "/pmglocal/vss2134/h 100%[===================>]  38.96M  99.6MB/s    in 0.4s    \n",
             "\n",
-            "2023-10-31 12:27:49 (99.5 MB/s) - ‘/pmglocal/vss2134/hpml/movie-corpus.zip’ saved [40854701/40854701]\n",
+            "2023-11-02 13:08:12 (99.6 MB/s) - ‘/pmglocal/vss2134/hpml/movie-corpus.zip’ saved [40854701/40854701]\n",
             "\n",
             "Archive:  /pmglocal/vss2134/hpml/movie-corpus.zip\n",
+            "   creating: /pmglocal/vss2134/hpml/movie-corpus/\n",
             "  inflating: /pmglocal/vss2134/hpml/movie-corpus/utterances.jsonl  \n",
             "  inflating: /pmglocal/vss2134/hpml/movie-corpus/conversations.json  \n",
             "  inflating: /pmglocal/vss2134/hpml/movie-corpus/corpus.json  \n",
@@ -173,31 +174,33 @@
             "['have fun tonight ?', 'tons']\n",
             "keep_words 7833 / 18079 = 0.4333\n",
             "Trimmed from 64313 pairs to 53131, 0.8261 of total\n",
-            "input_variable: tensor([[ 11, 104, 128,  14, 280],\n",
-            "        [298, 121,   8,  14,  14],\n",
-            "        [ 24, 251, 105, 837,   2],\n",
-            "        [310, 209, 187,  10,   0],\n",
-            "        [135,  85,  14,   2,   0],\n",
-            "        [463,  14,   2,   0,   0],\n",
-            "        [ 14,   2,   0,   0,   0],\n",
-            "        [  2,   0,   0,   0,   0]])\n",
-            "lengths: tensor([8, 7, 6, 5, 3])\n",
-            "target_variable: tensor([[  50,   83,   67,  385,   75],\n",
-            "        [1586,  953,  176,  213,   10],\n",
-            "        [ 886,   14,    8,  230,    2],\n",
-            "        [5626,    2,   18,  203,    0],\n",
-            "        [  14,    0,   10,   36,    0],\n",
-            "        [   2,    0,    2, 1099,    0],\n",
-            "        [   0,    0,    0,   14,    0],\n",
-            "        [   0,    0,    0,    2,    0]])\n",
+            "input_variable: tensor([[ 128, 7158,   11,    8,   19],\n",
+            "        [  11,   10,  208,   17,   10],\n",
+            "        [ 359,  128,  135, 1419,    2],\n",
+            "        [  33,   54,   49,    6,    0],\n",
+            "        [1973,    6,   24,    2,    0],\n",
+            "        [  31,  175,   14,    0,    0],\n",
+            "        [  90,  109,    2,    0,    0],\n",
+            "        [1218,   24,    0,    0,    0],\n",
+            "        [ 860,   10,    0,    0,    0],\n",
+            "        [   2,    2,    0,    0,    0]])\n",
+            "lengths: tensor([10, 10,  7,  5,  3])\n",
+            "target_variable: tensor([[1218,  128,   85,   34,   11],\n",
+            "        [6399,  321,   17,    8,  227],\n",
+            "        [  18,   14,   37,   17,  595],\n",
+            "        [ 621,  175,  267,    7,   24],\n",
+            "        [  14,  109,   14,    2,   14],\n",
+            "        [   2,   24,    2,    0,    2],\n",
+            "        [   0,   10,    0,    0,    0],\n",
+            "        [   0,    2,    0,    0,    0]])\n",
             "mask: tensor([[ True,  True,  True,  True,  True],\n",
             "        [ True,  True,  True,  True,  True],\n",
             "        [ True,  True,  True,  True,  True],\n",
-            "        [ True,  True,  True,  True, False],\n",
-            "        [ True, False,  True,  True, False],\n",
-            "        [ True, False,  True,  True, False],\n",
-            "        [False, False, False,  True, False],\n",
-            "        [False, False, False,  True, False]])\n",
+            "        [ True,  True,  True,  True,  True],\n",
+            "        [ True,  True,  True,  True,  True],\n",
+            "        [ True,  True,  True, False,  True],\n",
+            "        [False,  True, False, False, False],\n",
+            "        [False,  True, False, False, False]])\n",
             "max_target_len: 8\n"
           ]
         }
@@ -695,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
         "id": "WCbkBPRiA72I"
       },
@@ -983,122 +986,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {
         "id": "NETnx5qgA72L"
       },
       "outputs": [
         {
-          "data": {
-            "text/html": [
-              "Finishing last run (ID:4ukk5rtf) before initializing another..."
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "wandb: WARNING Source type is set to 'repo' but some required information is missing from the environment. A job will not be created from this run. See https://docs.wandb.ai/guides/launch/create-job\n"
+            "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mvinay-swamy\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
           ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8e9ae1cfc70e4955ac57e0299a216fbc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "VBox(children=(Label(value='0.020 MB of 0.020 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "<style>\n",
-              "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-              "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-              "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-              "    </style>\n",
-              "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>loss</td><td>█▆▆▅▆▆▄▅▅▅▃▄▅▄▄▃▄▃▄▃▂▂▃▃▂▂▃▁▂▁▂▂▁▁▁▂▁▁▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>loss</td><td>13.06503</td></tr></table><br/></div></div>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              " View run <strong style=\"color:#cdcd00\">crawly-shadow-75</strong> at: <a href='https://wandb.ai/vinay-swamy/HPML_hw3/runs/4ukk5rtf' target=\"_blank\">https://wandb.ai/vinay-swamy/HPML_hw3/runs/4ukk5rtf</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "Find logs at: <code>./wandb/run-20231031_123123-4ukk5rtf/logs</code>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/html": [
-              "Successfully finished last run (ID:4ukk5rtf). Initializing new run:<br/>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "050b3b21da6445f09aad0576898f1b7d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.011112093089872764, max=1.0…"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
         },
         {
           "data": {
@@ -1115,7 +1014,7 @@
         {
           "data": {
             "text/html": [
-              "Run data is saved locally in <code>/manitou/pmg/users/vss2134/HPML/hw3/wandb/run-20231031_131610-lwszb4tr</code>"
+              "Run data is saved locally in <code>/manitou/pmg/users/vss2134/HPML/hw3/wandb/run-20231102_130849-lazxmwpb</code>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -1127,7 +1026,7 @@
         {
           "data": {
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/vinay-swamy/HPML_hw3/runs/lwszb4tr' target=\"_blank\">ghostly-goblin-76</a></strong> to <a href='https://wandb.ai/vinay-swamy/HPML_hw3' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+              "Syncing run <strong><a href='https://wandb.ai/vinay-swamy/HPML_hw3/runs/lazxmwpb' target=\"_blank\">tough-lake-77</a></strong> to <a href='https://wandb.ai/vinay-swamy/HPML_hw3' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -1151,7 +1050,7 @@
         {
           "data": {
             "text/html": [
-              " View run at <a href='https://wandb.ai/vinay-swamy/HPML_hw3/runs/lwszb4tr' target=\"_blank\">https://wandb.ai/vinay-swamy/HPML_hw3/runs/lwszb4tr</a>"
+              " View run at <a href='https://wandb.ai/vinay-swamy/HPML_hw3/runs/lazxmwpb' target=\"_blank\">https://wandb.ai/vinay-swamy/HPML_hw3/runs/lazxmwpb</a>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -1170,36 +1069,36 @@
             "Starting Training!\n",
             "Initializing ...\n",
             "Training...\n",
-            "Iteration: 13; Percent complete: 0.3%; Average loss: 6.1674"
+            "Iteration: 14; Percent complete: 0.4%; Average loss: 5.6738"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "STAGE:2023-10-31 13:16:19 2021050:2021050 ActivityProfilerController.cpp:312] Completed Stage: Warm Up\n"
+            "STAGE:2023-11-02 13:09:09 990496:990496 ActivityProfilerController.cpp:312] Completed Stage: Warm Up\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Iteration: 20; Percent complete: 0.5%; Average loss: 5.1820"
+            "Iteration: 20; Percent complete: 0.5%; Average loss: 5.3559"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "STAGE:2023-10-31 13:16:20 2021050:2021050 ActivityProfilerController.cpp:318] Completed Stage: Collection\n",
-            "STAGE:2023-10-31 13:16:20 2021050:2021050 ActivityProfilerController.cpp:322] Completed Stage: Post Processing\n"
+            "STAGE:2023-11-02 13:09:10 990496:990496 ActivityProfilerController.cpp:318] Completed Stage: Collection\n",
+            "STAGE:2023-11-02 13:09:10 990496:990496 ActivityProfilerController.cpp:322] Completed Stage: Post Processing\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Iteration: 4000; Percent complete: 100.0%; Average loss: 4.1898"
+            "Iteration: 4000; Percent complete: 100.0%; Average loss: 2.9543"
           ]
         }
       ],
@@ -1286,21 +1185,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "OqN2x409A72L"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User: helllo\n",
+            "Error: Encountered unknown word.\n",
+            "User: hello\n",
+            "torch.Size([2, 1])\n",
+            "Bot: hello .\n",
+            "User: what day is it?\n",
+            "torch.Size([6, 1])\n",
+            "Bot: i . .\n",
+            "User: i what?\n",
+            "torch.Size([4, 1])\n",
+            "Bot: you . .\n",
+            "User: you ?\n",
+            "torch.Size([3, 1])\n",
+            "Bot: i m .\n",
+            "User: quit\n"
+          ]
+        }
+      ],
       "source": [
-        "# # Set dropout layers to ``eval`` mode\n",
-        "# encoder.eval()\n",
-        "# decoder.eval()\n",
+        "# Set dropout layers to ``eval`` mode\n",
+        "encoder.eval()\n",
+        "decoder.eval()\n",
         "\n",
-        "# # Initialize search module\n",
-        "# searcher = GreedySearchDecoder(encoder, decoder)\n",
+        "# Initialize search module\n",
+        "searcher = GreedySearchDecoder(encoder, decoder)\n",
         "\n",
-        "# # Begin chatting (uncomment and run the following line to begin)\n",
-        "# evaluateInput(encoder, decoder, searcher, voc)"
+        "# Begin chatting (uncomment and run the following line to begin)\n",
+        "evaluateInput(encoder, decoder, searcher, voc)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Profiling code\n",
+        "The outputs of the pytorch profiler are in `report.pdf`"
       ]
     },
     {
@@ -1309,7 +1238,7 @@
       "source": [
         "## WandB sweep\n",
         "\n",
-        "Note: output ommited for brevity"
+        "Note: output ommited for brevity; ~95 iterations of the sweep were run"
       ]
     },
     {
@@ -1366,7 +1295,7 @@
         "- optimizer = \"adam\"\n",
         "- decoder_lrn_ratio=3.0\n",
         "\n",
-        "The clip parameter, which corresponds to the maximum allowed value of the norm of the gradients, (ie gradient clipping) had the biggest effect on the loss(-0.6 correlation). This makes sense, as exploding gradients are a common source of problems in RNNs. There's a steep drop in the importance for other hyperparameters, with teacher forcing ratio, learning rate, and decoder learning ratio all hving correlations around -0.1. Fixing the choice of gradient clipping value and the choice of optimizer, and re-running hyperparamter tuning again with sampling over a fixed interval of values (vs using a set of fixed values) may yield more informative results for other parameters."
+        "The clip parameter, which corresponds to the maximum allowed value of the norm of the gradients, (ie gradient clipping) had the biggest effect on the loss(-0.6 correlation). This makes sense, as exploding gradients are a common source of problems in RNNs and so cliping the gradients can stabilize training. There's a steep drop in the importance for other hyperparameters, with teacher forcing ratio, learning rate, and decoder learning ratio all hving correlations around -0.1. Fixing the choice of gradient clipping value and the choice of optimizer, and re-running hyperparamter tuning again with sampling over a fixed interval of values (vs using a set of fixed values) may yield more informative results for other parameters."
       ]
     },
     {
@@ -1709,13 +1638,6 @@
       "source": [
         "scripted_searcher.save(\"serialized_scripted_searcher.pt\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
